# grpc_requests

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
grpc_requests/: utils.py
src/grpc_requests/: __init__.py  aio.py  client.py
src/tests/requests/: test_certs_client.py
tests/requests/: test_certs_async_client.py
