[tool.poetry]
name = "grpc_requests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
grpcio = ">=1.39.0"
grpcio-reflection = ">=1.39.0"
google-api-core = ">=1.31.0"
click = ">=7.1.2"
cryptography = ">=3.1.1"

[tool.poetry.dev-dependencies]
setuptools = ">=49.2.0"
wheel = ">=0.34.2"
twine = ">=3.2.0"
flake8 = ">=3.8.3"
pytest = "-cov>=2.10.0"
homi = "~=0.2.2"
aiounittest = "=1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
